# python-flake-template

./: .gitignore  flake.nix  pyproject.toml
app/: __init__.py
